# meson-examples

./: .gitmodules  README.md
executable/: meson.build
executable/src/: myexec.c
executable/subprojects/: headeronly
headeronly/: meson.build
headeronly/include/: headeronly.h
headeronly/tests/src/: tests.cpp
